parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LBRACE decl_list stmt_list RBRACE
Rule 2     decl_list -> decl decl_list
Rule 3     decl_list -> empty
Rule 4     decl -> type ID ASSIGN literal SEMICOLON
Rule 5     decl -> type id_list SEMICOLON
Rule 6     type -> INT
Rule 7     type -> FLOAT
Rule 8     type -> BOOL
Rule 9     type -> STRING
Rule 10    type -> CONST
Rule 11    id_list -> ID id_tail
Rule 12    id_tail -> COLON ID id_tail
Rule 13    id_tail -> empty
Rule 14    stmt_list -> stmt stmt_list
Rule 15    stmt_list -> empty
Rule 16    stmt -> assign_stmt
Rule 17    stmt -> print_stmt
Rule 18    stmt -> input_stmt
Rule 19    stmt -> if_stmt
Rule 20    stmt -> while_stmt
Rule 21    assign_stmt -> ID ASSIGN exp SEMICOLON
Rule 22    print_stmt -> PRINT LPAREN exp_list RPAREN SEMICOLON
Rule 23    input_stmt -> INPUT LPAREN id_list RPAREN SEMICOLON
Rule 24    if_stmt -> IF LPAREN exp RPAREN LBRACE stmt_list RBRACE else_part
Rule 25    else_part -> ELSE LBRACE stmt_list RBRACE
Rule 26    else_part -> empty
Rule 27    while_stmt -> WHILE LPAREN exp RPAREN LBRACE stmt_list RBRACE
Rule 28    exp -> exp_relational
Rule 29    exp_relational -> exp_arithmetic
Rule 30    exp_relational -> exp_arithmetic GT exp_arithmetic
Rule 31    exp_relational -> exp_arithmetic LT exp_arithmetic
Rule 32    exp_relational -> exp_arithmetic GEQ exp_arithmetic
Rule 33    exp_relational -> exp_arithmetic LEQ exp_arithmetic
Rule 34    exp_relational -> exp_arithmetic EQ exp_arithmetic
Rule 35    exp_relational -> exp_arithmetic NEQ exp_arithmetic
Rule 36    exp_arithmetic -> exp_arithmetic PLUS term
Rule 37    exp_arithmetic -> exp_arithmetic MINUS term
Rule 38    exp_arithmetic -> term
Rule 39    term -> term TIMES factor
Rule 40    term -> term DIVIDE factor
Rule 41    term -> factor
Rule 42    BOOL_CONST -> TRUE
Rule 43    BOOL_CONST -> FALSE
Rule 44    factor -> ID
Rule 45    factor -> INTEGER_CONST
Rule 46    factor -> FLOAT_CONST
Rule 47    factor -> STRING_CONST
Rule 48    factor -> BOOL_CONST
Rule 49    factor -> LPAREN exp RPAREN
Rule 50    empty -> <empty>
Rule 51    literal -> INTEGER_CONST
Rule 52    literal -> FLOAT_CONST
Rule 53    literal -> STRING_CONST
Rule 54    literal -> BOOL_CONST
Rule 55    exp_list -> exp exp_tail
Rule 56    exp_tail -> COLON exp exp_tail
Rule 57    exp_tail -> empty

Terminals, with rules where they appear

ASSIGN               : 4 21
BOOL                 : 8
COLON                : 12 56
CONST                : 10
DIVIDE               : 40
ELSE                 : 25
EQ                   : 34
FALSE                : 43
FLOAT                : 7
FLOAT_CONST          : 46 52
GEQ                  : 32
GT                   : 30
ID                   : 1 4 11 12 21 44
IF                   : 24
INPUT                : 23
INT                  : 6
INTEGER_CONST        : 45 51
LBRACE               : 1 24 25 27
LEQ                  : 33
LPAREN               : 22 23 24 27 49
LT                   : 31
MINUS                : 37
NEQ                  : 35
NOT                  : 
PLUS                 : 36
PRINT                : 22
PROGRAM              : 1
RBRACE               : 1 24 25 27
RPAREN               : 22 23 24 27 49
SEMICOLON            : 4 5 21 22 23
STRING               : 9
STRING_CONST         : 47 53
TIMES                : 39
TRUE                 : 42
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

BOOL_CONST           : 48 54
assign_stmt          : 16
decl                 : 2
decl_list            : 1 2
else_part            : 24
empty                : 3 13 15 26 57
exp                  : 21 24 27 49 55 56
exp_arithmetic       : 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37
exp_list             : 22
exp_relational       : 28
exp_tail             : 55 56
factor               : 39 40 41
id_list              : 5 23
id_tail              : 11 12
if_stmt              : 19
input_stmt           : 18
literal              : 4
print_stmt           : 17
program              : 0
stmt                 : 14
stmt_list            : 1 14 24 25 27
term                 : 36 37 38 39 40
type                 : 4 5
while_stmt           : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LBRACE decl_list stmt_list RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LBRACE decl_list stmt_list RBRACE

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LBRACE decl_list stmt_list RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) program -> PROGRAM ID LBRACE . decl_list stmt_list RBRACE
    (2) decl_list -> . decl decl_list
    (3) decl_list -> . empty
    (4) decl -> . type ID ASSIGN literal SEMICOLON
    (5) decl -> . type id_list SEMICOLON
    (50) empty -> .
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . STRING
    (10) type -> . CONST

    ID              reduce using rule 50 (empty -> .)
    PRINT           reduce using rule 50 (empty -> .)
    INPUT           reduce using rule 50 (empty -> .)
    IF              reduce using rule 50 (empty -> .)
    WHILE           reduce using rule 50 (empty -> .)
    RBRACE          reduce using rule 50 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    STRING          shift and go to state 12
    CONST           shift and go to state 13

    decl_list                      shift and go to state 5
    decl                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 5

    (1) program -> PROGRAM ID LBRACE decl_list . stmt_list RBRACE
    (14) stmt_list -> . stmt stmt_list
    (15) stmt_list -> . empty
    (16) stmt -> . assign_stmt
    (17) stmt -> . print_stmt
    (18) stmt -> . input_stmt
    (19) stmt -> . if_stmt
    (20) stmt -> . while_stmt
    (50) empty -> .
    (21) assign_stmt -> . ID ASSIGN exp SEMICOLON
    (22) print_stmt -> . PRINT LPAREN exp_list RPAREN SEMICOLON
    (23) input_stmt -> . INPUT LPAREN id_list RPAREN SEMICOLON
    (24) if_stmt -> . IF LPAREN exp RPAREN LBRACE stmt_list RBRACE else_part
    (27) while_stmt -> . WHILE LPAREN exp RPAREN LBRACE stmt_list RBRACE

    RBRACE          reduce using rule 50 (empty -> .)
    ID              shift and go to state 14
    PRINT           shift and go to state 23
    INPUT           shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26

    stmt_list                      shift and go to state 15
    stmt                           shift and go to state 16
    empty                          shift and go to state 17
    assign_stmt                    shift and go to state 18
    print_stmt                     shift and go to state 19
    input_stmt                     shift and go to state 20
    if_stmt                        shift and go to state 21
    while_stmt                     shift and go to state 22

state 6

    (2) decl_list -> decl . decl_list
    (2) decl_list -> . decl decl_list
    (3) decl_list -> . empty
    (4) decl -> . type ID ASSIGN literal SEMICOLON
    (5) decl -> . type id_list SEMICOLON
    (50) empty -> .
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . STRING
    (10) type -> . CONST

    ID              reduce using rule 50 (empty -> .)
    PRINT           reduce using rule 50 (empty -> .)
    INPUT           reduce using rule 50 (empty -> .)
    IF              reduce using rule 50 (empty -> .)
    WHILE           reduce using rule 50 (empty -> .)
    RBRACE          reduce using rule 50 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    STRING          shift and go to state 12
    CONST           shift and go to state 13

    decl                           shift and go to state 6
    decl_list                      shift and go to state 27
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 7

    (3) decl_list -> empty .

    ID              reduce using rule 3 (decl_list -> empty .)
    PRINT           reduce using rule 3 (decl_list -> empty .)
    INPUT           reduce using rule 3 (decl_list -> empty .)
    IF              reduce using rule 3 (decl_list -> empty .)
    WHILE           reduce using rule 3 (decl_list -> empty .)
    RBRACE          reduce using rule 3 (decl_list -> empty .)


state 8

    (4) decl -> type . ID ASSIGN literal SEMICOLON
    (5) decl -> type . id_list SEMICOLON
    (11) id_list -> . ID id_tail

    ID              shift and go to state 28

    id_list                        shift and go to state 29

state 9

    (6) type -> INT .

    ID              reduce using rule 6 (type -> INT .)


state 10

    (7) type -> FLOAT .

    ID              reduce using rule 7 (type -> FLOAT .)


state 11

    (8) type -> BOOL .

    ID              reduce using rule 8 (type -> BOOL .)


state 12

    (9) type -> STRING .

    ID              reduce using rule 9 (type -> STRING .)


state 13

    (10) type -> CONST .

    ID              reduce using rule 10 (type -> CONST .)


state 14

    (21) assign_stmt -> ID . ASSIGN exp SEMICOLON

    ASSIGN          shift and go to state 30


state 15

    (1) program -> PROGRAM ID LBRACE decl_list stmt_list . RBRACE

    RBRACE          shift and go to state 31


state 16

    (14) stmt_list -> stmt . stmt_list
    (14) stmt_list -> . stmt stmt_list
    (15) stmt_list -> . empty
    (16) stmt -> . assign_stmt
    (17) stmt -> . print_stmt
    (18) stmt -> . input_stmt
    (19) stmt -> . if_stmt
    (20) stmt -> . while_stmt
    (50) empty -> .
    (21) assign_stmt -> . ID ASSIGN exp SEMICOLON
    (22) print_stmt -> . PRINT LPAREN exp_list RPAREN SEMICOLON
    (23) input_stmt -> . INPUT LPAREN id_list RPAREN SEMICOLON
    (24) if_stmt -> . IF LPAREN exp RPAREN LBRACE stmt_list RBRACE else_part
    (27) while_stmt -> . WHILE LPAREN exp RPAREN LBRACE stmt_list RBRACE

    RBRACE          reduce using rule 50 (empty -> .)
    ID              shift and go to state 14
    PRINT           shift and go to state 23
    INPUT           shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26

    stmt                           shift and go to state 16
    stmt_list                      shift and go to state 32
    empty                          shift and go to state 17
    assign_stmt                    shift and go to state 18
    print_stmt                     shift and go to state 19
    input_stmt                     shift and go to state 20
    if_stmt                        shift and go to state 21
    while_stmt                     shift and go to state 22

state 17

    (15) stmt_list -> empty .

    RBRACE          reduce using rule 15 (stmt_list -> empty .)


state 18

    (16) stmt -> assign_stmt .

    ID              reduce using rule 16 (stmt -> assign_stmt .)
    PRINT           reduce using rule 16 (stmt -> assign_stmt .)
    INPUT           reduce using rule 16 (stmt -> assign_stmt .)
    IF              reduce using rule 16 (stmt -> assign_stmt .)
    WHILE           reduce using rule 16 (stmt -> assign_stmt .)
    RBRACE          reduce using rule 16 (stmt -> assign_stmt .)


state 19

    (17) stmt -> print_stmt .

    ID              reduce using rule 17 (stmt -> print_stmt .)
    PRINT           reduce using rule 17 (stmt -> print_stmt .)
    INPUT           reduce using rule 17 (stmt -> print_stmt .)
    IF              reduce using rule 17 (stmt -> print_stmt .)
    WHILE           reduce using rule 17 (stmt -> print_stmt .)
    RBRACE          reduce using rule 17 (stmt -> print_stmt .)


state 20

    (18) stmt -> input_stmt .

    ID              reduce using rule 18 (stmt -> input_stmt .)
    PRINT           reduce using rule 18 (stmt -> input_stmt .)
    INPUT           reduce using rule 18 (stmt -> input_stmt .)
    IF              reduce using rule 18 (stmt -> input_stmt .)
    WHILE           reduce using rule 18 (stmt -> input_stmt .)
    RBRACE          reduce using rule 18 (stmt -> input_stmt .)


state 21

    (19) stmt -> if_stmt .

    ID              reduce using rule 19 (stmt -> if_stmt .)
    PRINT           reduce using rule 19 (stmt -> if_stmt .)
    INPUT           reduce using rule 19 (stmt -> if_stmt .)
    IF              reduce using rule 19 (stmt -> if_stmt .)
    WHILE           reduce using rule 19 (stmt -> if_stmt .)
    RBRACE          reduce using rule 19 (stmt -> if_stmt .)


state 22

    (20) stmt -> while_stmt .

    ID              reduce using rule 20 (stmt -> while_stmt .)
    PRINT           reduce using rule 20 (stmt -> while_stmt .)
    INPUT           reduce using rule 20 (stmt -> while_stmt .)
    IF              reduce using rule 20 (stmt -> while_stmt .)
    WHILE           reduce using rule 20 (stmt -> while_stmt .)
    RBRACE          reduce using rule 20 (stmt -> while_stmt .)


state 23

    (22) print_stmt -> PRINT . LPAREN exp_list RPAREN SEMICOLON

    LPAREN          shift and go to state 33


state 24

    (23) input_stmt -> INPUT . LPAREN id_list RPAREN SEMICOLON

    LPAREN          shift and go to state 34


state 25

    (24) if_stmt -> IF . LPAREN exp RPAREN LBRACE stmt_list RBRACE else_part

    LPAREN          shift and go to state 35


state 26

    (27) while_stmt -> WHILE . LPAREN exp RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 36


state 27

    (2) decl_list -> decl decl_list .

    ID              reduce using rule 2 (decl_list -> decl decl_list .)
    PRINT           reduce using rule 2 (decl_list -> decl decl_list .)
    INPUT           reduce using rule 2 (decl_list -> decl decl_list .)
    IF              reduce using rule 2 (decl_list -> decl decl_list .)
    WHILE           reduce using rule 2 (decl_list -> decl decl_list .)
    RBRACE          reduce using rule 2 (decl_list -> decl decl_list .)


state 28

    (4) decl -> type ID . ASSIGN literal SEMICOLON
    (11) id_list -> ID . id_tail
    (12) id_tail -> . COLON ID id_tail
    (13) id_tail -> . empty
    (50) empty -> .

    ASSIGN          shift and go to state 37
    COLON           shift and go to state 39
    SEMICOLON       reduce using rule 50 (empty -> .)

    id_tail                        shift and go to state 38
    empty                          shift and go to state 40

state 29

    (5) decl -> type id_list . SEMICOLON

    SEMICOLON       shift and go to state 41


state 30

    (21) assign_stmt -> ID ASSIGN . exp SEMICOLON
    (28) exp -> . exp_relational
    (29) exp_relational -> . exp_arithmetic
    (30) exp_relational -> . exp_arithmetic GT exp_arithmetic
    (31) exp_relational -> . exp_arithmetic LT exp_arithmetic
    (32) exp_relational -> . exp_arithmetic GEQ exp_arithmetic
    (33) exp_relational -> . exp_arithmetic LEQ exp_arithmetic
    (34) exp_relational -> . exp_arithmetic EQ exp_arithmetic
    (35) exp_relational -> . exp_arithmetic NEQ exp_arithmetic
    (36) exp_arithmetic -> . exp_arithmetic PLUS term
    (37) exp_arithmetic -> . exp_arithmetic MINUS term
    (38) exp_arithmetic -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INTEGER_CONST
    (46) factor -> . FLOAT_CONST
    (47) factor -> . STRING_CONST
    (48) factor -> . BOOL_CONST
    (49) factor -> . LPAREN exp RPAREN
    (42) BOOL_CONST -> . TRUE
    (43) BOOL_CONST -> . FALSE

    ID              shift and go to state 42
    INTEGER_CONST   shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    STRING_CONST    shift and go to state 50
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    exp                            shift and go to state 43
    exp_relational                 shift and go to state 44
    exp_arithmetic                 shift and go to state 45
    term                           shift and go to state 46
    factor                         shift and go to state 47
    BOOL_CONST                     shift and go to state 51

state 31

    (1) program -> PROGRAM ID LBRACE decl_list stmt_list RBRACE .

    $end            reduce using rule 1 (program -> PROGRAM ID LBRACE decl_list stmt_list RBRACE .)


state 32

    (14) stmt_list -> stmt stmt_list .

    RBRACE          reduce using rule 14 (stmt_list -> stmt stmt_list .)


state 33

    (22) print_stmt -> PRINT LPAREN . exp_list RPAREN SEMICOLON
    (55) exp_list -> . exp exp_tail
    (28) exp -> . exp_relational
    (29) exp_relational -> . exp_arithmetic
    (30) exp_relational -> . exp_arithmetic GT exp_arithmetic
    (31) exp_relational -> . exp_arithmetic LT exp_arithmetic
    (32) exp_relational -> . exp_arithmetic GEQ exp_arithmetic
    (33) exp_relational -> . exp_arithmetic LEQ exp_arithmetic
    (34) exp_relational -> . exp_arithmetic EQ exp_arithmetic
    (35) exp_relational -> . exp_arithmetic NEQ exp_arithmetic
    (36) exp_arithmetic -> . exp_arithmetic PLUS term
    (37) exp_arithmetic -> . exp_arithmetic MINUS term
    (38) exp_arithmetic -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INTEGER_CONST
    (46) factor -> . FLOAT_CONST
    (47) factor -> . STRING_CONST
    (48) factor -> . BOOL_CONST
    (49) factor -> . LPAREN exp RPAREN
    (42) BOOL_CONST -> . TRUE
    (43) BOOL_CONST -> . FALSE

    ID              shift and go to state 42
    INTEGER_CONST   shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    STRING_CONST    shift and go to state 50
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    exp_list                       shift and go to state 55
    exp                            shift and go to state 56
    exp_relational                 shift and go to state 44
    exp_arithmetic                 shift and go to state 45
    term                           shift and go to state 46
    factor                         shift and go to state 47
    BOOL_CONST                     shift and go to state 51

state 34

    (23) input_stmt -> INPUT LPAREN . id_list RPAREN SEMICOLON
    (11) id_list -> . ID id_tail

    ID              shift and go to state 58

    id_list                        shift and go to state 57

state 35

    (24) if_stmt -> IF LPAREN . exp RPAREN LBRACE stmt_list RBRACE else_part
    (28) exp -> . exp_relational
    (29) exp_relational -> . exp_arithmetic
    (30) exp_relational -> . exp_arithmetic GT exp_arithmetic
    (31) exp_relational -> . exp_arithmetic LT exp_arithmetic
    (32) exp_relational -> . exp_arithmetic GEQ exp_arithmetic
    (33) exp_relational -> . exp_arithmetic LEQ exp_arithmetic
    (34) exp_relational -> . exp_arithmetic EQ exp_arithmetic
    (35) exp_relational -> . exp_arithmetic NEQ exp_arithmetic
    (36) exp_arithmetic -> . exp_arithmetic PLUS term
    (37) exp_arithmetic -> . exp_arithmetic MINUS term
    (38) exp_arithmetic -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INTEGER_CONST
    (46) factor -> . FLOAT_CONST
    (47) factor -> . STRING_CONST
    (48) factor -> . BOOL_CONST
    (49) factor -> . LPAREN exp RPAREN
    (42) BOOL_CONST -> . TRUE
    (43) BOOL_CONST -> . FALSE

    ID              shift and go to state 42
    INTEGER_CONST   shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    STRING_CONST    shift and go to state 50
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    exp                            shift and go to state 59
    exp_relational                 shift and go to state 44
    exp_arithmetic                 shift and go to state 45
    term                           shift and go to state 46
    factor                         shift and go to state 47
    BOOL_CONST                     shift and go to state 51

state 36

    (27) while_stmt -> WHILE LPAREN . exp RPAREN LBRACE stmt_list RBRACE
    (28) exp -> . exp_relational
    (29) exp_relational -> . exp_arithmetic
    (30) exp_relational -> . exp_arithmetic GT exp_arithmetic
    (31) exp_relational -> . exp_arithmetic LT exp_arithmetic
    (32) exp_relational -> . exp_arithmetic GEQ exp_arithmetic
    (33) exp_relational -> . exp_arithmetic LEQ exp_arithmetic
    (34) exp_relational -> . exp_arithmetic EQ exp_arithmetic
    (35) exp_relational -> . exp_arithmetic NEQ exp_arithmetic
    (36) exp_arithmetic -> . exp_arithmetic PLUS term
    (37) exp_arithmetic -> . exp_arithmetic MINUS term
    (38) exp_arithmetic -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INTEGER_CONST
    (46) factor -> . FLOAT_CONST
    (47) factor -> . STRING_CONST
    (48) factor -> . BOOL_CONST
    (49) factor -> . LPAREN exp RPAREN
    (42) BOOL_CONST -> . TRUE
    (43) BOOL_CONST -> . FALSE

    ID              shift and go to state 42
    INTEGER_CONST   shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    STRING_CONST    shift and go to state 50
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    exp                            shift and go to state 60
    exp_relational                 shift and go to state 44
    exp_arithmetic                 shift and go to state 45
    term                           shift and go to state 46
    factor                         shift and go to state 47
    BOOL_CONST                     shift and go to state 51

state 37

    (4) decl -> type ID ASSIGN . literal SEMICOLON
    (51) literal -> . INTEGER_CONST
    (52) literal -> . FLOAT_CONST
    (53) literal -> . STRING_CONST
    (54) literal -> . BOOL_CONST
    (42) BOOL_CONST -> . TRUE
    (43) BOOL_CONST -> . FALSE

    INTEGER_CONST   shift and go to state 62
    FLOAT_CONST     shift and go to state 63
    STRING_CONST    shift and go to state 64
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    literal                        shift and go to state 61
    BOOL_CONST                     shift and go to state 65

state 38

    (11) id_list -> ID id_tail .

    SEMICOLON       reduce using rule 11 (id_list -> ID id_tail .)
    RPAREN          reduce using rule 11 (id_list -> ID id_tail .)


state 39

    (12) id_tail -> COLON . ID id_tail

    ID              shift and go to state 66


state 40

    (13) id_tail -> empty .

    SEMICOLON       reduce using rule 13 (id_tail -> empty .)
    RPAREN          reduce using rule 13 (id_tail -> empty .)


state 41

    (5) decl -> type id_list SEMICOLON .
